--- a/lascasitas-react/package.json
+++ b/lascasitas-react/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://GigioInfo.github.io/LasCasitasApp",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
